app/(pages)/profile/page.module.css
.main {
  display: flex;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
  flex-direction: column;
  gap: 1rem;
  justify-content: space-evenly;
  align-items: center;
  min-height: 100vh;
  background-color: whitesmoke;

  @media (min-width: 576px) {
    padding-left: 3rem;
    padding-right: 3rem;
  }
  @media (min-width: 768px) {
    padding-left: 4rem;
    padding-right: 4rem;
  }
  @media (min-width: 992px) {
  }
  @media (min-width: 1200px) {
    flex-direction: row;
  }
  @media (min-width: 1520px) {
  }
}

.left_section {
  display: flex;
  flex-direction: column;
  margin-top: 8rem;
  margin-left: 4rem;
  margin-right: 4rem;
  width: 100%;
  max-width: 620px;
  max-height: 682px;
  @media (min-width: 576px) {
  }
  @media (min-width: 768px) {
  }
  @media (min-width: 992px) {
  }
  @media (min-width: 1200px) {
    margin-top: 1.5rem;
    width: 80%;
  }
  @media (min-width: 1520px) {
    margin-left: 10rem;
  }
}

.label {
  display: block;
  font-size: 24px;
  line-height: 100%;
  font-weight: 700;
  margin-bottom: 1rem;
  @media (min-width: 576px) {
  }
  @media (min-width: 768px) {
    font-size: 24px;
    line-height: 100%;
  }
  @media (min-width: 992px) {
    font-size: 26px;
    line-height: 100%;
    margin-bottom: 1.5rem;
  }
  @media (min-width: 1200px) {
    font-size: 28px;
    line-height: 100%;
  }
  @media (min-width: 1520px) {
    font-size: 30px;
    line-height: 100%;
    margin-bottom: 2rem;
  }
}

.input {
  padding: 1rem 0.75rem;
  border-radius: 0.375rem;
  border-width: 2px;
  border-color: rgba(191, 134, 216, 1);
  color: rgba(0, 0, 0, 0.7);
  width: 100%;
  margin-bottom: 1rem;
  font-weight: 400;
  font-size: 18px;
  line-height: 88%;
  letter-spacing: 0%;

  @media (min-width: 576px) {
    font-size: 20px;
    line-height: 88%;
  }
  @media (min-width: 768px) {
    font-size: 22px;
    line-height: 88%;
  }
  @media (min-width: 992px) {
    font-size: 26px;
    line-height: 88%;
    padding: 1.1rem 0.85rem;
    margin-bottom: 1.5rem;
  }
  @media (min-width: 1200px) {
    font-size: 28px;
    line-height: 88%;
  }
  @media (min-width: 1520px) {
    font-size: 30px;
    line-height: 88%;
    padding: 1.2rem 1rem;
    margin-bottom: 2rem;
  }
}

.right_section {
  display: flex;
  margin-top: 0rem;
  flex-direction: column;
  width: 100%;
  max-width: 42rem;
  text-align: center;
  @media (min-width: 576px) {
  }
  @media (min-width: 768px) {
  }
  @media (min-width: 992px) {
  }
  @media (min-width: 1200px) {
    margin-top: 2.5rem;
  }
  @media (min-width: 1520px) {
  }
}

.requirements_title {
  font-size: 48px;
  line-height: 72px;
  font-weight: bold;
  text-align: center;
  margin-bottom: 1rem;
  @media (min-width: 576px) {
    font-size: 64px;
    line-height: 84px;
  }
  @media (min-width: 768px) {
    font-size: 76px;
    line-height: 96px;
  }
  @media (min-width: 992px) {
    font-size: 84px;
    line-height: 116px;
  }
  @media (min-width: 1200px) {
    font-size: 84px;
    line-height: 116px;
  }
  @media (min-width: 1520px) {
    font-size: 96px;
    line-height: 130px;
  }
}

.requirements_p {
  font-family: Nunito Sans;
  font-size: 20px;
  line-height: 100%;
  font-weight: 500;
  letter-spacing: 0%;
  text-align: center;
  @media (min-width: 450px) {
    font-size: 26px;
    line-height: 100%;
  }
  @media (min-width: 576px) {
    font-size: 30px;
    line-height: 100%;
  }
  @media (min-width: 768px) {
    font-size: 30px;
    line-height: 100%;
  }
  @media (min-width: 992px) {
    font-size: 32px;
    line-height: 100%;
  }
  @media (min-width: 1200px) {
    font-size: 36px;
    line-height: 100%;
  }
  @media (min-width: 1520px) {
  }
}

.image_container {
  position: relative;
  width: 100%;
  max-width: 38rem;
  margin-left: 2.75rem;
  @media (min-width: 576px) {
    margin-left: 4rem;
  }
  @media (min-width: 768px) {
    margin-left: 5rem;
  }
  @media (min-width: 992px) {
  }
  @media (min-width: 1200px) {
    width: 100%;
    margin-left: 4.5rem;
  }
  @media (min-width: 1520px) {
  }
}

.requirement_text_container {
  display: flex;
  margin-top: 0rem;
  justify-content: space-between;
  width: 100%;
  max-width: 42rem;
  @media (min-width: 576px) {
  }
  @media (min-width: 768px) {
  }
  @media (min-width: 992px) {
  }
  @media (min-width: 1200px) {
  }
  @media (min-width: 1520px) {
  }
}

